--- a/src/app/owner-company-employee-component/owner-company-employee-component.html
+++ b/src/app/owner-company-employee-component/owner-company-employee-component.html
@@ -34,7 +34,7 @@
       <th>Email</th>
       <th>Telefon</th>
       <th>Beosztás</th>
-      <th>Cég ID</th>
+      <th>Cégnév</th>
       <th>Műveletek</th>
     </tr>
     </thead>
