--- a/src/app/worksheet-component/worksheet-details/worksheet-details.html
+++ b/src/app/worksheet-component/worksheet-details/worksheet-details.html
@@ -177,11 +177,11 @@
       <!-- Teljes összeg -->
       <p class="text-end fw-bold fs-5 mt-3">
         Javítás teljes NETTÓ összege:
-        <span class="text-success">{{ totalGross() | number:'1.0-0' }} Ft</span>
+        <span class="text">{{ totalGross() | number:'1.0-0' }} Ft</span>
       </p>
       <p class="text-end fw-bold fs-5 mt-3">
         Javítás teljes BRUTTÓ összege:
-        <span class="text-success">{{ totalGross() * 1.27 | number:'1.0-0' }} Ft</span>
+        <span class="text">{{ totalGross() * 1.27 | number:'1.0-0' }} Ft</span>
 
       </p>
     </div>
