--- a/src/app/tool-component/tool-component.html
+++ b/src/app/tool-component/tool-component.html
@@ -102,7 +102,7 @@
       </thead>
 
       <tbody>
-        @for (tool of filteredTools(); track tool.tool_id) {
+        @for (tool of filteredTools(); track tool.id) {
           <tr>
 
             <td>{{ tool.name }}</td>
